--- a/Schedule/Info.plist
+++ b/Schedule/Info.plist
@@ -27,6 +27,10 @@
 		<string>CooleyCasual.ttf</string>
 		<string>Consola.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
