--- a/Schedule.xcodeproj/xcshareddata/xcschemes/ScheduleWatch Extension.xcscheme
+++ b/Schedule.xcodeproj/xcshareddata/xcschemes/ScheduleWatch Extension.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1020"
+   LastUpgradeVersion = "1230"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -68,10 +68,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/ScheduleWatch Extension">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7A15FC881FDDC7CD0012A883"
@@ -79,7 +77,7 @@
             BlueprintName = "ScheduleWatch Extension"
             ReferencedContainer = "container:Schedule.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -87,10 +85,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/ScheduleWatch Extension">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7A15FC881FDDC7CD0012A883"
@@ -98,16 +94,7 @@
             BlueprintName = "ScheduleWatch Extension"
             ReferencedContainer = "container:Schedule.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7A15FC881FDDC7CD0012A883"
-            BuildableName = "ScheduleWatch Extension.appex"
-            BlueprintName = "ScheduleWatch Extension"
-            ReferencedContainer = "container:Schedule.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
